--- a/app/src/main/res/layout/fragment_helps.xml
+++ b/app/src/main/res/layout/fragment_helps.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.HelpsFragment">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="25pt"
-        android:background="@drawable/mann"/>
-</FrameLayout>
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:adjustViewBounds="true"
+
+
+
+        android:layout_gravity="center"
+        android:src="@drawable/mann"
+        android:scaleType="fitXY" />
+</ScrollView>
