--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,16 +11,46 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            android:orientation="vertical">
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/view_pager_slider"
-                android:layout_width="match_parent"
-                android:layout_height="116pt"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
 
-                android:layout_marginTop="0dp"
-                />
+            android:layout_margin="15dp"
+            android:orientation="vertical">
+            <androidx.cardview.widget.CardView
+
+                android:layout_marginLeft="@dimen/_3sdp"
+                android:layout_width="match_parent"
+                app:cardCornerRadius="10dp"
+                android:elevation="5dp"
+                android:background="@color/blu"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                <androidx.viewpager.widget.ViewPager
+                    android:id="@+id/view_pager_slider"
+                    android:layout_width="match_parent"
+                    android:layout_height="130pt"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+
+                    android:layout_marginTop="0dp"
+                    />
+                <com.viewpagerindicator.CirclePageIndicator
+                    android:id="@+id/indicator"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="bottom"
+                    android:padding="10dip"
+                    app:centered="true"
+                    app:fillColor="#df0623"
+                    app:pageColor="#fff"
+                    app:snap="false" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -117,6 +147,192 @@
                 </LinearLayout>
 
             </HorizontalScrollView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="3"
+                android:layout_marginTop="10pt"
+                >
+                <LinearLayout
+                    android:layout_width="0dp"
+
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+
+                    android:layout_marginLeft="2pt"
+
+                    android:layout_height="wrap_content"
+                    >
+                    <androidx.cardview.widget.CardView
+
+                        android:layout_marginLeft="@dimen/_3sdp"
+                        android:layout_width="match_parent"
+                        app:cardCornerRadius="10dp"
+                        android:elevation="5dp"
+                        android:id="@+id/adlt"
+                        android:background="@color/blu"
+                        android:layout_height="80pt">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:weightSum="3"
+                            android:layout_margin="5dp"
+                            >
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="129dp"
+                                android:layout_weight="2"
+                                android:scaleType="fitXY"
+                                android:layout_gravity="center"
+                                android:src="@drawable/adltmalendfemale" />
+                            <View
+                                android:layout_width="50pt"
+                                android:layout_gravity="center"
+                                android:layout_height="5dp"
+                                android:background="#000"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="cursive"
+                                android:text="Adult"
+                                android:textStyle="bold"
+                                android:gravity="center"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                                android:textColor="#000"
+                                android:textSize="35sp" />
+
+
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+
+                    android:layout_marginLeft="1pt"
+                    android:layout_height="wrap_content"
+                    >
+                    <androidx.cardview.widget.CardView
+
+                        android:layout_marginLeft="5dp"
+                        android:layout_width="match_parent"
+                        app:cardCornerRadius="10dp"
+                        android:elevation="5dp"
+                        android:id="@+id/kdi"
+                        android:background="@color/blu"
+                        android:layout_height="80pt">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:weightSum="3"
+                            android:id="@+id/kid"
+                            android:layout_margin="5dp"
+                            >
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_height="129dp"
+                                android:layout_weight="2"
+                                android:layout_gravity="center"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/malendfemale" />
+                            <View
+                                android:layout_width="50pt"
+                                android:layout_gravity="center"
+                                android:layout_height="5dp"
+                                android:background="#000"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="cursive"
+                                android:text="Kids"
+                                android:textStyle="bold"
+                                android:gravity="center"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                                android:textColor="#000"
+                                android:textSize="35sp" />
+
+
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+
+                    android:layout_marginLeft="1pt"
+                    android:layout_height="wrap_content"
+                    >
+                    <androidx.cardview.widget.CardView
+
+                        android:layout_marginLeft="5dp"
+                        android:layout_width="match_parent"
+                        app:cardCornerRadius="10dp"
+
+                        android:elevation="5dp"
+                        android:layout_gravity="center"
+                        android:id="@+id/cstm"
+                        android:background="@color/blu"
+                        android:layout_height="80pt">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:weightSum="3"
+                            android:id="@+id/cust_design"
+                            android:layout_margin="5dp"
+                            >
+
+                            <ImageView
+                                android:layout_width="match_parent"
+                                android:layout_gravity="center"
+                                android:layout_height="129dp"
+                                android:layout_weight="2"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/custm" />
+                            <View
+                                android:layout_width="50pt"
+                                android:layout_gravity="center"
+                                android:layout_height="5dp"
+                                android:layout_marginTop="5dp"
+                                android:background="#000"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="cursive"
+                                android:text="Custom Design"
+                                android:textStyle="bold"
+                                android:gravity="center"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                                android:textColor="#000"
+                                android:textSize="20sp" />
+
+
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+
+                </LinearLayout>
+            </LinearLayout>
+
 
             <TextView
                 android:layout_width="match_parent"
