--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="blu">#2B2B2B</color>
     <color name="pnk">#2B2B2B</color>
     <color name="white">#fff</color>
+
+    <color name="active">#AA0619</color>
+
+    <color name="notactive">#FCFCFC</color>
 </resources>
